# FIRESTARTER

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  COPYING  DeveloperDocumenation.md  FIRESTARTER  FIRESTARTER_CUDA  INSTALL  Makefile  README  README.md  USAGE  appveyor.yml  avx512_functions.c  avx_functions.c  batch  batch.c  batch.h  batch_orig.c  code-generator.py  config.cfg  cpu.h  data.R  debug.c  default.nix  derivation.nix  err  errDebug.c  firestarter_global.h  fma4_functions.c  fma_functions.c  generic.c  gpu.c  gpu.h  help.c  (+20 more)
.github/: install-cuda.ps1
.github/cuda-11.0/: cuda.nuspec
.github/cuda-11.0/tools/: chocolateyinstall.ps1
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake.yml  ctest.yml
3rd-party-licenses/: nitro.LICENSE
cmake/: BuildOptions.cmake  BuildSettings.cmake  DarwinBuild.cmake  GitSubmoduleUpdate.cmake  InstallGoogleTest.cmake  InstallHwloc.cmake  InstallLLVM.cmake
examples/: Pipfile  test_metric.py
examples/Evaluation_Notebook/: Evaluation_Notebook.ipynb
examples/ScoreP_Tracing/: CMakeLists.txt  README.md  ScoreP.c
examples/tracing/: README.md  scorep.c
include/: cxxopts.hpp
include/firestarter/: AlignedAlloc.hpp  CPUTopology.hpp  Config.hpp  Constants.hpp  CpuFeatures.hpp  CpuModel.hpp  DumpRegisterStruct.hpp  DumpRegisterWorkerData.hpp  Environment.hpp  ErrorDetectionStruct.hpp  Firestarter.hpp  FunctionSelection.hpp  LoadWorkerData.hpp  LoadWorkerMemory.hpp  ProcessorInformation.hpp  SafeExit.hpp  ThreadAffinity.hpp  ThreadData.hpp  Tracing.h  WindowsCompat.hpp  firestarter.hpp  global.hpp  log.hpp  threadData.hpp  util.h  x86.h
include/firestarter/Compat/: x86.h
include/firestarter/Config/: Config.hpp  CpuBind.hpp  InstructionGroups.hpp  MetricName.hpp
include/firestarter/Cuda/: Cuda.hpp  CudaHipCompat.hpp
include/firestarter/Environment/: CPUTopology.hpp  Environment.hpp  ProcessorInformation.hpp  ThreadAffinity.hpp
include/firestarter/Json/: MetricName.hpp  Summary.hpp
include/firestarter/Logging/: FirstWorkerThreadFilter.hpp  Log.hpp
lib/: .clang-tidy  .gitignore  CMakeLists.txt
source_files/: INSTALL  Makefile  README  avx512_functions.c  avx_functions.c  cpu.h  firestarter.h  firestarter_global.h  fma4_functions.c  fma_functions.c  generic.c  gpu.c  gpu.h  help.c  help.h  init_functions.c  lib_main.c  main.c  main_win64.c  sse2_functions.c  watchdog.c  watchdog.h  work.c  work.h  x86.c  x86_win64.c  zen_fma_functions.c
src/: CMakeLists.txt
src/firestarter/: CPUTopology.cpp  Config.cpp  CpuAffinity.cpp  CpuClockrate.cpp  DumpRegisterWorker.cpp  Environment.cpp  Firestarter.cpp  FunctionSelection.cpp  LoadWorker.cpp  Main.cpp  ProcessorInformation.cpp  SafeExit.cpp  ThreadAffinity.cpp  ThreadWorker.cpp  WatchdogWorker.cpp  clockrate.cpp  cpuClockrate.cpp  firestarter.cpp  main.cpp  threadWorker.cpp  x86.c
src/firestarter/Compat/: x86.c
src/firestarter/Config/: Config.cpp  CpuBind.cpp  InstructionGroups.cpp  MetricName.cpp
src/firestarter/Cuda/: Cuda.cpp
src/firestarter/Environment/: CPUTopology.cpp  CpuAffinity.cpp  CpuClockrate.cpp  Environment.cpp  ProcessorInformation.cpp  ThreadAffinity.cpp
src/firestarter/Environment/AArch64/: AArch64CPUTopology.cpp  AArch64Environment.cpp
src/firestarter/Environment/AArch64/Payload/: AArch64DefaultPayload.cpp  AArch64NEONFMAPayload.cpp  AArch64Payload.cpp
src/firestarter/Environment/Payload/: CompiledPayload.cpp  Payload.cpp  PayloadSettings.cpp
src/firestarter/Environment/X86/: CpuClockrate.cpp  CpuParameter.cpp  Functions.cpp  Timestamp.cpp  X86CPUTopology.cpp  X86Environment.cpp  X86ProcessorInformation.cpp
src/firestarter/Environment/X86/Compat/: x86.c
src/firestarter/Environment/X86/Payload/: AVX512Payload.cpp  AVX512_AMX_Payload.cpp  AVX512_Payload.cpp  AVXPayload.cpp  FMA4Payload.cpp  FMAPayload.cpp  Payload.cpp  SSE2Payload.cpp  X86Payload.cpp  ZENFMAPayload.cpp
src/firestarter/Environment/X86/Platform/: X86PlatformConfig.cpp
src/firestarter/Hip/: Hip.cpp
src/firestarter/Measurement/: MeasurementWorker.cpp  Metric.cpp  Summary.cpp
src/firestarter/Measurement/Metric/: IPCEstimate.cpp  Perf.cpp  PerfIPC.cpp  RAPL.cpp
src/firestarter/OneAPI/: OneAPI.cpp
src/firestarter/Optimizer/: OptimizerWorker.cpp  Population.cpp
src/firestarter/Optimizer/Algorithm/: NSGA2.cpp  SAMO_IS.cpp
src/firestarter/Optimizer/Util/: MultiObjective.cpp
src/firestarter/Payload/: CompiledPayload.cpp  PayloadSettings.cpp
src/firestarter/Tracing/: Caliper.cpp  External.cpp  LogTracing.cpp  NoTracing.cpp  None.cpp  ScoreP.cpp  VampirTrace.cpp
src/firestarter/X86/: X86ProcessorInformation.cpp
src/firestarter/X86/Payload/: AVX512Payload.cpp  AVXPayload.cpp  FMA4Payload.cpp  FMAPayload.cpp  SSE2Payload.cpp  X86Payload.cpp  ZENFMAPayload.cpp
src/firestarter/X86/Platform/: X86PlatformConfig.cpp
src/firestarter/oneAPI/: oneAPI.cpp
templates/: Makefile.py  avx512_functions_c.py  avx_functions_c.py  firestarter_global_h.py  fma4_functions_c.py  fma_functions_c.py  lib_main_c.py  main_c.py  main_win64_c.py  sse2_functions_c.py  util.py  work_c.py  work_h.py  zen_fma_functions_c.py
test/: CMakeLists.txt
test/DumpCPUTopology/: CMakeLists.txt  Main.cpp
test/DumpCPUTopology/inputs/: alder-lake-linux.xml  sapphire-rapids-linux.xml  wsl2.xml  zih-hpc-capella-cgroup.xml
test/DumpPayloads/: CMakeLists.txt  Main.cpp
test/UnitTests/: CMakeLists.txt  CpuBindTest.cpp  FunctionSelectionTest.cpp  InstructionGroupsTest.cpp  MetricNameTest.cpp  MetricsTest.cpp  X86CpuFeaturesTest.cpp  X86CpuModelTest.cpp  X86PayloadTest.cpp  X86PlatformConfigTest.cpp
test/X86Functions/: CMakeLists.txt  Main.cpp
tmp/: README.md
tmp/source_files/: README  firestarter_global.h  generic.c  help.c  main_win64.c
tmp/templates/: avx512_functions_c.py  fma4_functions_c.py
tooling/: clang-tidy.py  ref-test.py
travis-ci/: before-linux.sh  before-osx.sh  before-windows.sh  install-cmake-3-13.sh  install-cuda-trusty.sh  install-cuda-xenial.sh  install-linux.sh  install-osx.sh  install-windows.sh
(+111 files in other folders)
